dataset1235/2025-2/1153765216/users/1581346053/executions/2747719322_1927446959.log
== RUN (2025-08-19 17:46:20)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * 1 - 0.63, 2)
print("27% de {n} = {porcentagem_27}")
print("{n} acrescimo de 42% = {acrescimo_42}")
print("{n} com desconto de 63% = {desconto_63}")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
{n} com desconto de 63% = {desconto_63}
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:09:55)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(n * 0.42, 2)
desconto_63 = round(n * 0.63, 2)
print(porcentagem_27)
print(acrescimo_42)
print(desconto_63)

-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
77.58
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
15.75
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
205.13
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
2247.78
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
3418.51
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
7.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:53:21)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * 1 - 0.63, 2)
print("27% de {n} = {porcentagem_27}")
print("{n} acrescimo de 42% = {acrescimo_42}")
print("{n} com desconto de 63% = {desconto_63}")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
{n} com desconto de 63% = {desconto_63}
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:41:28)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 - round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * (1 - 0.63), 2)
print(f"27% de {n} = {porcentagem_27}")
print(f"{n} acrescimo de 42% = {acrescimo_42}")
print(f"{n} com desconto de 63% = {desconto_63}")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    porcentagem_27 - round(n * 0.27, 2)
    ^^^^^^^^^^^^^^
NameError: name 'porcentagem_27' is not defined
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    porcentagem_27 - round(n * 0.27, 2)
    ^^^^^^^^^^^^^^
NameError: name 'porcentagem_27' is not defined
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    porcentagem_27 - round(n * 0.27, 2)
    ^^^^^^^^^^^^^^
NameError: name 'porcentagem_27' is not defined
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    porcentagem_27 - round(n * 0.27, 2)
    ^^^^^^^^^^^^^^
NameError: name 'porcentagem_27' is not defined
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    porcentagem_27 - round(n * 0.27, 2)
    ^^^^^^^^^^^^^^
NameError: name 'porcentagem_27' is not defined
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    porcentagem_27 - round(n * 0.27, 2)
    ^^^^^^^^^^^^^^
NameError: name 'porcentagem_27' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:03:17)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * 1 - 0.63, 2)
print (porcentagem_27)
print (acrescimo_42)
print (desconto_63)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
122.51
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
24.37
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
324.97
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.27
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5425.57
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
11.52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:03:15)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * 1 - 0.63, 2)
print (porcentagem_27)
print (acrescimo_42)
print (desconto_63)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
122.51
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
24.37
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
324.97
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.27
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5425.57
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
11.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:46:18)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * 1 - 0.63, 2)
print("27% de {n} = {porcentagem_27}")
print("{n} acrescimo de 42% = {acrescimo_42}")
print("{n} com desconto de 63% = {desconto_63}")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
{n} com desconto de 63% = {desconto_63}
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:03:16)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * 1 - 0.63, 2)
print (porcentagem_27)
print (acrescimo_42)
print (desconto_63)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
122.51
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
24.37
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
324.97
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.27
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5425.57
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
11.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:02:48)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * 1 - 0.63, 2)
print(porcentagem_27)
print(acrescimo_42)
print(desconto_63)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
122.51
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
24.37
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
324.97
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.27
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5425.57
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
11.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:59:23)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * 1 - 0.63, 2)
print({n} = {porcentagem_27})
print({n} acrescimo de 42% = {acrescimo_42})
print({n} com desconto de 63% = {desconto_63})

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 5
    print({n} = {porcentagem_27})
          ^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 5
    print({n} = {porcentagem_27})
          ^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 5
    print({n} = {porcentagem_27})
          ^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 5
    print({n} = {porcentagem_27})
          ^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 5
    print({n} = {porcentagem_27})
          ^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 5
    print({n} = {porcentagem_27})
          ^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:43:57)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * 1 - 0.63, 2)
print(f"27% de {n} = {porcentagem_27}")
print(f"{n} acrescimo de 42% = {acrescimo_42}")
print(f"{n} com desconto de 63% = {desconto_63}")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
123.14 com desconto de 63% = 122.51
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
25.0 com desconto de 63% = 24.37
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
325.6 com desconto de 63% = 324.97
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.9 com desconto de 63% = 3567.27
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5426.2 com desconto de 63% = 5425.57
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
12.15 com desconto de 63% = 11.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:20:14)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(n + n * 0.42, 2)
desconto_63 = round(n - n * 0.63, 2)
print(porcentagem_27)
print(acrescimo_42)
print(desconto_63)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:46:19)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * 1 - 0.63, 2)
print("27% de {n} = {porcentagem_27}")
print("{n} acrescimo de 42% = {acrescimo_42}")
print("{n} com desconto de 63% = {desconto_63}")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
{n} com desconto de 63% = {desconto_63}
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 17:43:06)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * 1 - 0.63, 2)
print(f"27% de {n} = {porcentagem_27}")
print(f"{n} acrescimo de 42% = {acrescimo_42}")
print(f"{n} com desconto de 63% = {desconto_63}")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
123.14 com desconto de 63% = 122.51
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
25.0 com desconto de 63% = 24.37
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
325.6 com desconto de 63% = 324.97
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.9 com desconto de 63% = 3567.27
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5426.2 com desconto de 63% = 5425.57
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
12.15 com desconto de 63% = 11.52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:03:33)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * 1 - 0.63, 2)
print(porcentagem_27)
print(acrescimo_42)
print(desconto_63)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
122.51
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
24.37
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
324.97
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.27
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5425.57
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
11.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:40:28)
-- CODE: 
n = float(input(Digite um numero real:))
porcentagem_27 - round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * (1 - 0.63), 2)
print(f"27% de {n} = {porcentagem_27}")
print(f"{n} acrescimo de 42% = {acrescimo_42}")
print(f"{n} com desconto de 63% = {desconto_63}")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    n = float(input(Digite um numero real:))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    n = float(input(Digite um numero real:))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    n = float(input(Digite um numero real:))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    n = float(input(Digite um numero real:))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    n = float(input(Digite um numero real:))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    n = float(input(Digite um numero real:))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:58:47)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * 1 - 0.63, 2)
print(27% de {n} = {porcentagem_27})
print({n} acrescimo de 42% = {acrescimo_42})
print({n} com desconto de 63% = {desconto_63})

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 5
    print(27% de {n} = {porcentagem_27})
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 5
    print(27% de {n} = {porcentagem_27})
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 5
    print(27% de {n} = {porcentagem_27})
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 5
    print(27% de {n} = {porcentagem_27})
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 5
    print(27% de {n} = {porcentagem_27})
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 5
    print(27% de {n} = {porcentagem_27})
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:41:29)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 - round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * (1 - 0.63), 2)
print(f"27% de {n} = {porcentagem_27}")
print(f"{n} acrescimo de 42% = {acrescimo_42}")
print(f"{n} com desconto de 63% = {desconto_63}")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    porcentagem_27 - round(n * 0.27, 2)
    ^^^^^^^^^^^^^^
NameError: name 'porcentagem_27' is not defined
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    porcentagem_27 - round(n * 0.27, 2)
    ^^^^^^^^^^^^^^
NameError: name 'porcentagem_27' is not defined
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    porcentagem_27 - round(n * 0.27, 2)
    ^^^^^^^^^^^^^^
NameError: name 'porcentagem_27' is not defined
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    porcentagem_27 - round(n * 0.27, 2)
    ^^^^^^^^^^^^^^
NameError: name 'porcentagem_27' is not defined
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    porcentagem_27 - round(n * 0.27, 2)
    ^^^^^^^^^^^^^^
NameError: name 'porcentagem_27' is not defined
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    porcentagem_27 - round(n * 0.27, 2)
    ^^^^^^^^^^^^^^
NameError: name 'porcentagem_27' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:19:32)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(n + n * 0.42, 2)
desconto_63 = round(n * 0.63, 2)
print(porcentagem_27)
print(acrescimo_42)
print(desconto_63)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
77.58
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
15.75
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
205.13
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
2247.78
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
3418.51
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
7.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:40:55)
-- CODE: 
n = float(input(Digite um numero real: ))
porcentagem_27 - round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * (1 - 0.63), 2)
print(f"27% de {n} = {porcentagem_27}")
print(f"{n} acrescimo de 42% = {acrescimo_42}")
print(f"{n} com desconto de 63% = {desconto_63}")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    n = float(input(Digite um numero real: ))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    n = float(input(Digite um numero real: ))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    n = float(input(Digite um numero real: ))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    n = float(input(Digite um numero real: ))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    n = float(input(Digite um numero real: ))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    n = float(input(Digite um numero real: ))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:43:01)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * 1 - 0.63, 2)
print(f"27% de {n} = {porcentagem_27}")
print(f"{n} acrescimo de 42% = {acrescimo_42}")
print(f"{n} com desconto de 63% = {desconto_63}")

-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
123.14 com desconto de 63% = 122.51
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
25.0 com desconto de 63% = 24.37
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
325.6 com desconto de 63% = 324.97
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.9 com desconto de 63% = 3567.27
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5426.2 com desconto de 63% = 5425.57
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
12.15 com desconto de 63% = 11.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:06:35)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(0.42, 2)
desconto_63 = round(0.63, 2)
print(porcentagem_27)
print(acrescimo_42)
print(desconto_63)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
0.63
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
0.63
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
0.63
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
0.63
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
0.63
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
0.63
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:57:30)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * 1 - 0.63, 2)
print(27% de {n} = {porcentagem_27})
print({n} acrescimo de 42% = {acrescimo de _42})
print({n} com desconto de 63% = {desconto_63})

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 5
    print(27% de {n} = {porcentagem_27})
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 5
    print(27% de {n} = {porcentagem_27})
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 5
    print(27% de {n} = {porcentagem_27})
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 5
    print(27% de {n} = {porcentagem_27})
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 5
    print(27% de {n} = {porcentagem_27})
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 5
    print(27% de {n} = {porcentagem_27})
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:46:21)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * 1 - 0.63, 2)
print("27% de {n} = {porcentagem_27}")
print("{n} acrescimo de 42% = {acrescimo_42}")
print("{n} com desconto de 63% = {desconto_63}")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
{n} com desconto de 63% = {desconto_63}
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:40:57)
-- CODE: 
n = float(input(Digite um numero real: ))
porcentagem_27 - round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * (1 - 0.63), 2)
print(f"27% de {n} = {porcentagem_27}")
print(f"{n} acrescimo de 42% = {acrescimo_42}")
print(f"{n} com desconto de 63% = {desconto_63}")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    n = float(input(Digite um numero real: ))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    n = float(input(Digite um numero real: ))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    n = float(input(Digite um numero real: ))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    n = float(input(Digite um numero real: ))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    n = float(input(Digite um numero real: ))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    n = float(input(Digite um numero real: ))
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 17:46:21)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(1.42, 2)
desconto_63 = round(n * 1 - 0.63, 2)
print("27% de {n} = {porcentagem_27}")
print("{n} acrescimo de 42% = {acrescimo_42}")
print("{n} com desconto de 63% = {desconto_63}")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
{n} com desconto de 63% = {desconto_63}
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
{n} com desconto de 63% = {desconto_63}
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:19:49)
-- CODE: 
n = float(input("Digite um numero real: "))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(n + n * 0.42, 2)
desconto_63 = round(n + n * 0.63, 2)
print(porcentagem_27)
print(acrescimo_42)
print(desconto_63)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
200.72
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
40.75
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
530.73
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
5815.68
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
8844.71
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
19.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
